[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Characters.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Alien.gd" type="Script" id=2]
[ext_resource path="res://Scripts/RayCast.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "purple",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[node name="Alien" type="Area2D" groups=["Alien"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "purple"

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -7.999, 0 )
collide_with_areas = true
script = ExtResource( 3 )

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 7.999, 0 )
collide_with_areas = true
script = ExtResource( 3 )

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -7.999 )
collide_with_areas = true
script = ExtResource( 3 )

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 7.999 )
collide_with_areas = true
script = ExtResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_Alien_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Alien_mouse_exited"]
[connection signal="ray_cast_collided" from="RayCastLeft" to="." method="_on_RayCastLeft_ray_cast_collided"]
[connection signal="ray_cast_collided" from="RayCastRight" to="." method="_on_RayCastRight_ray_cast_collided"]
[connection signal="ray_cast_collided" from="RayCastUp" to="." method="_on_RayCastUp_ray_cast_collided"]
[connection signal="ray_cast_collided" from="RayCastDown" to="." method="_on_RayCastDown_ray_cast_collided"]
